<resources>

    <string name="app_name">SpotIT</string>
    <string name="building_prompt">Choose a Building:</string>
    <string name="spot_no">Spot No:</string>
    <string name="floor">Floor:</string>
    <string name="building">Building:</string>
    <string name="claim_spot">Claim Spot</string>
    <string name="other_spot">Other Spot</string>
    <string name="data_entry">Data Entry</string>
    <string name="own_spot">Find Own Spot</string>
    <string name="release_parking">Release Parking</string>
    <string name="select_or_enter">Select one of the options below or make manual entry</string>
    <string name="manual">Enter Manually</string>
    <string name="send">Send</string>
	<string-array name="building_array">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
    </string-array>
    <string name="floor_prompt">Choose a Floor:</string>
	<string-array name="floor_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    
</resources>
