<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spot_no"/>
        <EditText android:id="@+id/manual_spot_no"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="number" />
        
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/building_prompt"/>
        <Spinner android:id="@+id/manual_building" 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:entries="@array/building_array"
	        android:prompt="@string/building_prompt"/>
        
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/floor_prompt"/>
         <Spinner android:id="@+id/manual_floor" 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:entries="@array/floor_array"
	        android:prompt="@string/floor_prompt"/>
        
    </LinearLayout>
     

</LinearLayout>
