<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        	<TextView
		        android:paddingLeft="2dp"
		        android:textSize="20sp"
		        android:textStyle="bold"
		        android:textColor="#FFF"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" 
		        android:text="@string/spot_no"/>
	        <TextView
		        android:id="@+id/list_spot_no"
		        android:paddingLeft="2dp"
		        android:textSize="20sp"
		        android:textStyle="bold"
		        android:textColor="#FFF"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" />
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        	<TextView
		        android:paddingLeft="2dp"
		        android:textSize="20sp"
		        android:textStyle="bold"
		        android:textColor="#fff"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" 
		        android:text="@string/building"/>
	        <TextView
		        android:id="@+id/list_building"
		        android:paddingLeft="2dp"
		        android:textSize="20sp"
		        android:textStyle="bold"
		        android:textColor="#fff"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"/>
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        	<TextView
		        android:paddingLeft="5dp"
		        android:textColor="#fff"
		        android:textSize="17sp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/floor"/>
	        <TextView
		        android:id="@+id/list_floor"
		        android:paddingLeft="5dp"
		        android:textColor="#fff"
		        android:textSize="17sp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>